Update Real Time Monitoring.dash.yaml

--- a/Micrometer/Real Time Monitoring.dash.yaml
+++ b/Micrometer/Real Time Monitoring.dash.yaml
@@ -9,7 +9,7 @@ datasets:
     cacheMaxRows: 30000
     expression: >-
       $map($, function($v){
-          [$v[0], $v[1], $v[2], $now() ~> $toMillis()]
+          [$v[0], $v[1], $v[2] = 'NaN' ? -1 : $v[2], $now() ~> $toMillis()]           
       })
     columns:
       - id: metric
